Fixed image on mobile, had to compromize on aspect ratio

--- a/wedding/global_style.css
+++ b/wedding/global_style.css
@@ -118,11 +118,13 @@ nav a {
 }
 
 .splash_image_container {
-	height: 100vh;
+	overflow: hidden;
+    position: relative;
+    height: 100%;
 }
 
 .splash_image {
-	height: 100%;
+	height: 100vh;
 }
 
 .info_title {
